h1. CHANGELOG

h2. 2.4.34 March 1, 2014

* update 'rails-foundation' example application for Rails 4.1

h2. 2.4.33 February 27, 2014

* add 'rails-devise-pundit' example application to 'apps4' recipe

h2. 2.4.32 February 26, 2014

* update 'rails-omniauth' example application for Rails 4.1
* skip helpers and assets when generating a controller

h2. 2.4.31 February 24, 2014

* generate Devise registration forms after database migrations are complete

h2. 2.4.30 February 24, 2014

* change prompts

h2. 2.4.29 February 24, 2014

* update 'rails-devise' example application for Rails 4.1
* for Rails 4.1, use the Figaro master pending next release of Figaro (fixes #280)
* remove 'rake db:test:prepare' (deprecated)

h2. 2.4.28 February 20, 2014

* issue #282 resolved, newest Devise release supports Rails 4.1

h2. 2.4.27 February 19, 2014

* for Rails 4.1, use Devise master pending next release of Devise (see issue #282)
* specify 'foundation-rails 5.0.3.1' pending resolution of issue #281

h2. 2.4.26 February 18, 2014

* don't install the Figaro gem under Rails 4.1

h2. 2.4.25 February 13, 2014

* add support for Phusion Passenger
* add 'rails-omniauth' example application to 'apps4' recipe
* set email ports to 587 instead of 25 (contributed by mazlix)

h2. 2.4.24 February 1, 2014

* fix issue with mongoid-rspec version
* fix Rolify generator
* use Markdown for README (contributed by Steve Schwartz)

h2. 2.4.23 January 30, 2014

* don't send emails in development mode (contributed by Steve Schwartz)
* new recipe 'email_dev' for mailcatcher and mail_view (contributed by Steve Schwartz)
* fixes for 'activeadmin' recipe (contributed by Steve Schwartz)
* add Foreman procfile (contributed by Steve Schwartz)
* use 'foreman run' to get ENV variables if Foreman is selected (contributed by Steve Schwartz)
* change display of recipes and preferences in README (contributed by Steve Schwartz)

h2. 2.4.22 January 28, 2014
